[package]
name = "api"
version = "0.1.0"
authors = ["Danilo Pereira <dnp1@users.noreply.github.com>"]

[dependencies]
iron="^0.5"
router="^0.5"
params="^0.7.1"
bodyparser="^0.7"

postgres= { version = "*", features = ["with-uuid", "with-chrono"] }
r2d2="*"
r2d2_postgres="*"
handlebars-iron="*"
jsonwebtoken="3"
serde = "1.0.19"
serde_json= "*"
serde_derive="*"
uuid = { version = " ^0.5", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.iron-cors]
git = "https://github.com/dnp1/iron-cors-rs"